# connect

./: .dockerignore  .env  .gitignore  CONTRIBUTING.md  Dockerfile  IPFS.md  MAINTAINERS.md  Pipfile  README.md  configure-nats.sh  docker-compose.yml  logging.yaml  nats-info.sh  pyproject.toml  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: epic.md
.github/workflows/: connect-ci.yml  connect-image-build.yml  docker-build.yml  pyconnect-ci.yml  pyconnect-image-build.yml
connect/: __init__.py  asgi.py  config.py  config.py.save  exceptions.py  main.py  server_handlers.py
connect/clients/: README.md  ethereum.py  ipfs.py  kafka.py  nats.py  opensearch.py
connect/routes/: api.py  data.py  fhir.py  ingress.py  status.py  x12.py
connect/support/: __init__.py  availability.py  encoding.py  kafka_segments.py  timer.py
connect/workflows/: core.py  fhir.py  x12.py
k8s-deployment/: README.md  delete-k8s-ns.sh  deployment-down.sh  deployment-up.sh
k8s-deployment/connect/: connect-deployment.yml
k8s-deployment/ibm-fhir/: ibm-fhir-server.yml
load-test/: README.md  locustfile.py
local-certs/: README.md  ca.cnf  install-certificates.sh  mk-certs.sh  nats-server.cnf  natsservercert.csr  server.cnf  server.nk  servercert.csr  uninstall-certificates.sh
local-config/: README.md  install-certificates.sh  uninstall-certificates.sh
private-ipfs-network/: init.sh
pyconnect/: __init__.py  asgi.py  clients.py  config.py  exceptions.py  main.py  server_handlers.py  subscribers.py  support.py  utils.py  version.py
tests/: __init__.py  conftest.py  test_support.py
(+88 files in other folders)
