[metadata]
name = linuxforhealth-connect
version = attr: connect.__version__
description = LinuxForHealth Connectors for Inbound Data Processing
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache 2.0
keywords =
    healthit
    linuxforhealth
    ccda
    dicom
    x12
    fhir
    hl7
    linux
url = https://linuxforhealth.github.io/docs
project_urls =
    Bug Tracker = https://github.com/LinuxForHealth/connect/issues
    Source = https://github.com/LinuxForHealth/connect
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Intended Audience :: Healthcare Industry
    Topic :: Scientific/Engineering :: Medical Science Apps.
    Operating System :: OS Independent

[options]
python_requires = >=3.8
install_requires =
    asyncio-nats-client>=0.11.4
    confluent-kafka>=1.6.0
    fastapi>=0.63.0
    pyaml>=20.4.0
    requests>=2.25.1
    pyaml>=20.4.0
    linuxforhealth-xworkflows>=1.0.0
    fhir.resources>=6.1.0
    uvicorn[standard]>=0.13.4
    httpx>=0.17.0
    slowapi>=0.1.4

[options.extras_require]
test =
    pytest>=6.1.2
    pytest-asyncio>=0.14.0
dev =
    flake8>=3.9.0
    autopep8>=1.5.5
    pylint>=2.6.0'

[flake8]
max-line-length=120
